# mcpmate

./: .augmentignore  .dockerignore  .env  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESKTOP_DEPENDENCIES_ANALYSIS.md  GEMINI.md  LICENSE  README.cn.md  README.md  README_CN.md  README_JP.md  biome.json  build-all.sh  build.rs  deploy.sh  mcp.json  mcp_client.py  mcp_proxy.py  mcp_tool.py  mcp_tool_caller.py  plan.md  pyproject.toml  rust-toolchain.toml  rustfmt.toml  workspace-progress.md
backend/: AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  clippy.toml  rust-toolchain.toml  rustfmt.toml
backend/.cargo/: config.toml
backend/config/: mcp.json  ucan.json5
backend/config/client/: 5ire.json5  cherry_studio.json5  claude_code.json5  codebuddy.json5  codex.json5  cursor.json5  deepchat.json5  kiro.json5  qoder.json5  trae.json5  vscode.json5  warp.json5  windsurf.json5  zed.json5
backend/crates/mcpmate-capability-store/: Cargo.toml
backend/crates/mcpmate-capability-store/src/: cache.rs  domain.rs  error.rs  lib.rs  schema.rs  sqlite.rs
backend/crates/mcpmate-capability-store/tests/: cache_contract.rs  catalog_contract.rs  scale_evidence.rs
backend/crates/mcpmate-llm/: Cargo.toml  README.md
backend/crates/mcpmate-llm/src/: anthropic.rs  config.rs  credentials.rs  error.rs  events.rs  factory.rs  lib.rs  manager.rs  openai.rs  provider.rs  repository.rs  types.rs
backend/crates/mcpmate-secrets/: Cargo.toml  README.md  SECURITY_BOUNDARY.md
backend/crates/mcpmate-secrets/src/: constants.rs  crypto.rs  database.rs  lib.rs  model.rs  reference.rs  root_key.rs  store.rs  testing.rs  types.rs
backend/script/: build-linux.sh  build-windows.sh  registry-publish.sh  registry-validate.sh
backend/src/: lib.rs  main.rs  test_helpers.rs
backend/src/api/: README.md  mod.rs
backend/src/api/handlers/: audit.rs  llm.rs  mod.rs  onboarding.rs  registry.rs  runtime.rs  secrets.rs  secrets_password.rs  system.rs
backend/src/api/models/: README.md  audit.rs  cache.rs  client.rs  inspector.rs  llm.rs  mod.rs  oauth.rs  onboarding.rs  profile.rs  runtime.rs  secrets.rs  server.rs  system.rs  token_estimate.rs
backend/src/api/routes/: audit.rs  client.rs  inspector.rs  llm.rs  mod.rs  onboarding.rs  openapi.rs  profile.rs  registry.rs  runtime.rs  secrets.rs  server.rs  system.rs
backend/src/audit/: interceptor.rs  logger.rs  mod.rs  policy.rs  storage.rs  types.rs
backend/src/clients/: README.md  admin_discovery.rs  analyzer.rs  detector.rs  discovery.rs  document.rs  engine.rs  error.rs  keymap.rs  mod.rs  models.rs  mutate.rs  renderer.rs  source.rs  storage.rs  utils.rs
backend/src/clients/adapters/: cherry_kv.rs  mod.rs  warp_sqlite.md  warp_sqlite.rs
backend/src/clients/service/: apply.rs  backup.rs  config_rules.rs  core.rs  list.rs  mod.rs  query.rs  reapply.rs  reapply_hosted.rs  rules.rs  settings.rs  state.rs  sync.rs  sync_transparent_profile.rs
backend/src/common/: capability.rs  constants.rs  database.rs  env.rs  http.rs  json.rs  mod.rs  path.rs  paths.rs  server.rs  startup_diagnostics.rs  status.rs  sync.rs  types.rs
backend/src/components/: confirm-dialog.tsx  server-form.tsx  status-badge.tsx
backend/src/config/: audit_database.rs  database.rs  defaults.rs  import.rs  initialization.rs  mod.rs  runtime.rs
backend/src/config/client/: init.rs  mod.rs
backend/src/config/llm/: crud.rs  init.rs  mod.rs  models.rs  repository.rs
backend/src/config/models/: profile.rs  prompt.rs  resource.rs  server.rs
backend/src/config/operations/: server.rs  utils.rs
backend/src/config/profile/: basic.rs  constants.rs  guidance.rs  init.rs  mod.rs  prompt.rs  resource.rs  resource_template.rs  server.rs  tool.rs
backend/src/config/registry/: cache.rs  init.rs  mod.rs  sync.rs
backend/src/config/server/: args.rs  capabilities.rs  crud.rs  env.rs  fingerprint.rs  headers.rs  import.rs  init.rs  meta.rs  mod.rs  namespace.rs  namespace_repair.rs  (+3 more)
backend/src/core/: mod.rs  models.rs  secrets.rs  token_estimate.rs
backend/src/dxtake/: readme.md
backend/src/inspector/: calls.rs  context.rs  contract.rs  evidence.rs  handshake.rs  mod.rs  runtime.rs  service.rs  sessions.rs  target.rs  template.rs  workspace.rs
backend/src/interop/: bridge.rs  engine.rs  mod.rs  types.rs
backend/src/lib/: api.ts  types.ts
backend/src/macros/: entity.rs  id.rs  resp.rs
backend/src/mcper/: mod.rs
backend/src/runtime/: detection.rs  downloader.rs  installer.rs  manager.rs  mod.rs  resolver.rs
backend/src/system/: config.rs  mod.rs  port_recovery.rs  settings.rs
backend/templates/llm/: test_gen_create.txt  test_gen_custom.txt  test_gen_delete.txt  test_gen_execute.txt  test_gen_fileio.txt  test_gen_query.txt  test_gen_update.txt
backend/tests/: capability_read_surface.rs  http_auth.rs  inspector-rmcp-upgrade-plan.md  inspector_smoke.rs  profile_guidance.rs  profile_guidance_api.rs  profile_guidance_resources.rs  secrets_runtime_config.rs  secrets_store_api.rs
desktop/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json  tauri.nightly-overlay.json  tauri.release-overlay.json
desktop/src-tauri/capabilities/: main-window.json  operator-window.json
desktop/src-tauri/src/: account.rs  audit.rs  config.rs  core_service.rs  deep_link.rs  deeplink.rs  diagnostics.rs  environment.rs  lib.rs  oauth.rs  oauth_callback_access.rs  operator_window.rs  runtime_env.rs  runtime_ports.rs  shell.rs  source_config.rs  utils.rs
extension/cherry/: .gitignore  Cargo.toml  README.md
extension/cherry/examples/: basic_usage.rs
extension/cherry/src/: error.rs  lib.rs  manager.rs  types.rs  utils.rs
src/ai/: .gitignore  Cargo.toml  README.md  build_optimized.sh  sample.txt
src/ai/docs/: ARCHITECTURE.md  README.md  download_model.sh
src/ai/prompts/: extract_rules.txt  json_validation.txt
src/ai/src/: config.rs  constants.rs  device.rs  extractor.rs  lib.rs  main.rs  model.rs  prompt.rs  tokenizer.rs  utils.rs
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: main-window.json
tauri/src-tauri/src/: lib.rs
(+1598 files in other folders)
