[package]
name = "mcpmate"
version = "0.1.0"
edition = "2024"
default-run = "mcpmate"
description = "MCPMate - A comprehensive management center for Model Context Protocol (MCP) servers"
authors = ["Loocor <loocor@gmail.com>"]

[lib]
name = "mcpmate"
path = "src/lib.rs"

[dev-dependencies]
mockall = "0.12"
wiremock = "0.5"
tempfile = "3.2"
assert_matches = "1.5"
assert_cmd = "2.0"
predicates = "3.0"
httpmock = "0.7.0"
test-case = "3.3"
env_logger = "0.11"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serial_test = "2.0"
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.2", features = ["full"] }
axum-test = "14.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
atty = "0.2"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
flate2 = "1.0"
json5 = "0.4"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
rmcp = { path = "../sdk/crates/rmcp", features = [
  "__reqwest",
  "client",
  "macros",
  "reqwest",
  "server",
  "transport-child-process",
  "transport-io",
  "transport-sse-client",
  "transport-sse-server",
  "transport-streamable-http-client",
  "transport-streamable-http-server",
  "transport-worker",
] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.3"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
tar = "0.4"
terminal_size = "0.3"
thiserror = "1.0"
tokio = { version = "1.44", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.30.5"
url = "2.5"
zip = "2.1"
sqlx = { version = "0.8.1", features = [
  "runtime-tokio",
  "sqlite",
  "migrate",
  "chrono",
  "runtime-tokio-rustls"
] }
nanoid = "0.4.0"
which = "6.0"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower = { version = "0.5", features = ["util"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[[bin]]
name = "bridge"
path = "src/bin/bridge.rs"

[[bin]]
name = "runtime"
path = "src/bin/runtime.rs"

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = 3
strip = true
debug = 0