[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-client"
version = "0.1.0"
description = "A minimal command line client for MCP servers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]",
    "rich",
    "typer",
]

[project.scripts]
mcp-client = "mcp_client.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
