[package]
name = "mcpmate"
version = "0.1.0"
edition = "2024"
default-run = "mcpmate"
description = "MCPMate - A comprehensive management center for Model Context Protocol (MCP) servers"
authors = ["Loocor <loocor@gmail.com>"]
homepage = "https://mcp.umate.ai"
repository = "https://github.com/loocor/MCPMate"
license = "AGPL-3.0-only"
readme = "README.md"
keywords = ["mcp", "proxy", "ai", "server", "desktop"]
categories = ["network-programming", "web-programming::http-server"]
resolver = "2"
build = "build.rs"

[lib]
name = "mcpmate"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
mockall = "0.12"
wiremock = "0.5"
tempfile = "3.2"
assert_matches = "1.5"
assert_cmd = "2.0"
predicates = "3.0"
httpmock = "0.7.0"
test-case = "3.3"
env_logger = "0.11"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serial_test = "2.0"
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.6", features = ["full"] }
axum-test = "15.0"
tokio-tungstenite = "0.26"
futures-util = "0.3"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
is-terminal = "0.4"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
flate2 = "1.0"
futures = "0.3"
json5 = "0.4"
reqwest = { version = "0.13", features = [
  "json",
  "query",
  "stream",
  "rustls",
], default-features = false }
rmcp = { version = "1.3.0", features = [
  "__reqwest",
  "auth",
  "client",
  "macros",
  "reqwest",
  "server",
  "transport-child-process",
  "transport-io",
  "transport-streamable-http-client",
  "transport-streamable-http-client-reqwest",
  "transport-streamable-http-server",
  "transport-worker",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8.4", features = ["macros", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
handlebars = "5.1"
serde_yaml = "0.9"
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
tar = "0.4"
terminal_size = "0.3"
thiserror = "1.0"
tokio = { version = "1.44", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.30.5"
url = "2.5"
zip = "2.1"
sqlx = { version = "0.8.1", features = [
  "runtime-tokio",
  "sqlite",
  "migrate",
  "chrono",
  "runtime-tokio-rustls",
] }
nanoid = "0.4.0"
which = "6.0"
walkdir = "2.3"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower = { version = "0.5", features = ["util"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
base64 = "0.22.1"
lru = "0.12"
semver = "1.0"
redb = "2.1"
bincode = "1.3"
sha2 = "0.10"
dashmap = "6.1"
num_cpus = "1.16"
aide = { version = "0.15", features = [
  "axum",
  "axum-json",
  "axum-query",
  "scalar",
] }
schemars = { version = "0.9", features = ["chrono04", "derive"] }
paste = "1.0"
uuid = { version = "1", features = ["v5"] }

# AI module dependencies
candle-core = "0.8"
candle-transformers = "0.8"
candle-nn = "0.8"
tokenizers = "0.15"
hf-hub = "0.3"
arc-swap = "1.7.1"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8", features = ["metal"] }
candle-transformers = { version = "0.8", features = ["metal"] }
candle-nn = { version = "0.8", features = ["metal"] }

# Build Targets
[[bin]]
name = "bridge"
path = "src/bin/bridge.rs"

# Feature Flags
[features]
default = ["warp-sqlite"]
interop = []
standalone = []
warp-sqlite = []

# Development Profile - Optimized for fast compilation
[profile.dev]
debug = 1
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 1

# Release Profile - Optimized for performance
[profile.release]
panic = "abort"
codegen-units = 1
opt-level = 3
strip = true
debug = 0

# Shared Dependencies - Reduces duplicate compilation
[workspace.dependencies]
tokio = { version = "1.45", features = ["full"] }
hyper = "1.6"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
base64 = "0.22.1"
url = "2.5"
tower = { version = "0.5", features = ["util"] }
axum = "0.8.4"
tracing = "0.1"
