[package]
name = "mcpmate-tauri"
version = "0.1.0"
edition = "2024"
description = "MCPMate desktop beta shell built with Tauri"
authors = ["Loocor <loocor@gmail.com>"]
default-run = "mcpmate"

[workspace]

[dependencies]
anyhow = "1"
tauri = { version = "2", features = ["tray-icon", "wry", "image-png"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = "0.7"
tracing = "0.1"
mcpmate = { path = "../../backend" }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["macros", "local-offset"] }
rfd = "0.14"
webbrowser = "0.8"
regex = "1"
once_cell = "1"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset", "cookies", "gzip", "brotli", "deflate", "zstd"] }
url = "2"
base64 = "0.22"
hyper = { version = "1", features = ["server", "http1"] }
http-body-util = "0.1"
tokio-stream = "0.1"
futures-util = "0.3"
bytes = "1"
hyper-util = { version = "0.1", features = ["server", "tokio"] }
async-stream = "0.3"
twoway = "0.2"
tauri-plugin-deep-link = "2"
uuid = { version = "1.22.0", features = ["v4"] }
hostname = "0.4"
service-manager = { git = "https://github.com/loocor/service-manager-rs", rev = "9c1200af240e5820c3e2d62344cf17d60e907efa" }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
plist = "1.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []

[[bin]]
name = "mcpmate"
path = "src/main.rs"
