[package]
name = "mcpmate-ai"
version = "0.1.0"
edition = "2021"
description = "MCPMate AI module for text MCP configuration extraction"
authors = ["Loocor <loocor@gmail.com>"]

# 独立工作空间，不参与主项目工作空间
[workspace]

# 库目标配置
[lib]
name = "mcpmate_ai"
path = "src/lib.rs"

# 二进制目标配置
[[bin]]
name = "extractor"
path = "src/main.rs"

[dependencies]
# 基于Candle-rs官方quantized示例的依赖配置，全面启用Metal加速
anyhow = "1.0"
candle-core = { version = "0.8", features = ["metal"] }
candle-transformers = { version = "0.8", features = ["metal"] }
candle-nn = { version = "0.8", features = ["metal"] }
tokenizers = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
hf-hub = "0.3"

# HuggingFace Hub API (用于下载tokenizer，但我们会优先使用本地文件)

# 开发和调试依赖
[dev-dependencies]
tempfile = "3.2"

# 性能优化配置
[profile.dev]
debug = 1
incremental = true

[profile.release]
opt-level = 3
strip = true
debug = 0
