[package]
name = "mcpmate-tauri"
version = "0.1.0"
edition = "2024"
description = "MCPMate desktop alpha shell built with Tauri"
authors = ["Loocor <loocor@gmail.com>"]
default-run = "mcpmate"

[workspace]

[dependencies]
anyhow = "1"
tauri = { version = "2", features = ["wry"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = "0.7"
tracing = "0.1"
mcpmate = { path = "../.." }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []

[[bin]]
name = "mcpmate"
path = "src/main.rs"
