[package]
name = "mcpmate-llm"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "LLM provider contracts and provider implementations for MCPMate"
authors = ["Loocor <loocor@gmail.com>"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.13", features = [
  "json",
  "stream",
  "rustls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
url = "2.5"
